# nala2_vrx

./: Changelog.md  README.md
docker/: Dockerfile.base
vrx_gz/config/: wamv.yaml
vrx_gz/launch/: competition.launch.py
vrx_gz/src/: Surface.cc
vrx_gz/worlds/: nbpark.sdf
vrx_urdf/rviz_plugin/: CMakeLists.txt  LICENSE  ares.rviz  package.xml  plugin_description.xml
vrx_urdf/rviz_plugin/include/rviz_plugin/: waypoint_nav_frame.hpp  waypoint_nav_tool.hpp
vrx_urdf/rviz_plugin/launch/: gazebo.launch.py  set_map.launch.py  setup.launch.py  setup.launch_old.py
vrx_urdf/rviz_plugin/maps/: test1.pgm  test1.yaml
vrx_urdf/rviz_plugin/media/: waypoint.dae
vrx_urdf/rviz_plugin/rviz/: aegeus.rviz  aegeus3.rviz  ares-old.rviz  ares.rviz  gazebo.rviz  mapping.rviz
vrx_urdf/rviz_plugin/src/: waypoint_nav_frame.cpp  waypoint_nav_tool.cpp
vrx_urdf/rviz_plugin/ui/: WaypointNavigation.ui  stmMonitoring.ui
vrx_urdf/vrx_gazebo/config/: rviz_vrx_rsp.rviz
vrx_urdf/vrx_gazebo/launch/: rviz.launch.py
